--- a/navigation.html
+++ b/navigation.html
@@ -1,17 +1,15 @@
 <nav>
     <div>
         <a href="/">
-            <div id="logo"><img src="image.png" alt="Home"/></div>
-            <div id="headtag"><img src="image.png" alt="Home"/></div>
-            <div id="tagline"><img src="image.png" alt="Home"/></div>
+            <div id="logo"><img id="pfp" src="images/icon.png" alt="Home"/></div>
         </a>
     </div>
     <div> 
         <a href="/" class="here">Home</a>
-        <a href="/about.html" >About</a>      
-        <a href="/services.html" >Services</a>          
-        <a href="/pricing.html" >Pricing</a>    
-        <a href="/contact.html" >Contact Us</a>
-        <input id="srchbar" type="search" placeholder="Search">
+        <a href="/about.html" >Post</a>      
+        <a href="/services.html" >Activity</a>          
+        <a href="/pricing.html" >Profile</a>    
+        <a href="/contact.html" >Search</a>
     </div>
 </nav>
+<link rel="stylesheet" href="styles.css">
