--- a/indexLoggedOut.html
+++ b/indexLoggedOut.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Name</title>
+    <title>Common Ground</title>
     <style>
         * {
             box-sizing: border-box;
@@ -283,11 +283,11 @@
     </header>
 
     <nav class="nav">
-        <a href="#" class="nav-item">New Post</a>
-        <a href="#" class="nav-item">Activity</a>
-        <a href="#" class="nav-item">Home</a>
-        <a href="#" class="nav-item">Profile</a>
-        <a href="#" class="nav-item">Search</a>
+        <a href="newpost.html" class="nav-item">New Post</a>
+        <a href="activity.html" class="nav-item">Activity</a>
+        <a href="home.html" class="nav-item">Home</a>
+        <a href="login.html" class="nav-item">Profile</a>
+        <a href="search.html" class="nav-item">Search</a>
     </nav>
 
     <div class="main-content">
