Filled in admin_results with some copy paste placeholder stuff

--- a/admin_search.html
+++ b/admin_search.html
@@ -38,7 +38,7 @@
     <!-- Feed section for Admin search form -->
     <main class="feed">
       <h2 class="feed-header">Search Users</h2>
-      <!-- Need to use admin specific class here (I assume .admin-search-form arbitrarily)-->
+      <!-- Use form from CSS style -->
       <form id="adminSearchForm" class="admin-search-form">
         <label for="searchQuery">Username or Email:</label>
         <input 
