Basic new_post outline

--- a/admin_results.html
+++ b/admin_results.html
@@ -12,7 +12,7 @@
     <a href="#" class="logout-btn">Logout</a>
   </header>
 
-  <!-- Navigation -->
+  <!-- just to clarify - these don't work (yet), replace as needed -->
   <nav class="nav">
     <a href="home.html" class="nav-item">Home</a>
     <a href="search.html" class="nav-item">Search</a>
