--- a/search.html
+++ b/search.html
@@ -40,7 +40,10 @@
         
         <main class="feed">
             <div class="search-bar">
-                <b>Search</b>
+                <b>Search:</b>
+                <div id="bar">
+
+                </div> 
             </div>
         </main>
         
