--- a/admin_search.html
+++ b/admin_search.html
@@ -6,20 +6,20 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Navigation Bar -->
+  <nav class="nav">
+    <a href="login.html" class="nav-item">New Post</a>
+    <a href="activity.html" class="nav-item">Activity</a>
+    <a href="indexLoggedIn.html" class="nav-item">Home</a>
+    <a href="profileLoggedIn.html" class="nav-item">Profile</a>
+    <a href="search.html" class="nav-item">Search</a>
+  </nav>
+
   <!-- Header -->
   <header class="header">
     <h1 class="site-name">Common Ground - Admin</h1>
     <a href="#" class="logout-btn">Logout</a>
   </header>
-
-  <!-- just to clarify - these don't work (yet), replace as needed -->
-  <nav class="nav">
-    <a href="home.html" class="nav-item">Home</a>
-    <a href="search.html" class="nav-item">Search</a>
-    <a href="activity.html" class="nav-item">Activity</a>
-    <a href="profile.html" class="nav-item">Profile</a>
-    <a href="admin-search.html" class="nav-item">Admin</a>
-  </nav>
 
   <!-- Main Content -->
   <div class="main-content">
