--- a/indexLoggedIn.html
+++ b/indexLoggedIn.html
@@ -6,8 +6,8 @@
     <title>Common Ground</title>
     <link rel="stylesheet" href = "styles.css">
 
+    <!-- Temporary, to be replaced once DB implemented-->
     <style>
-     
      #family-tag {
         background-color: #ffe89d;
      }
@@ -26,16 +26,15 @@
      #sports-tag {
         background-color: #8dbae1;
      }
-
-    
     </style>
+
 </head>
 <body>
     <nav class="nav">
         <a href="newpost.html" class="nav-item">New Post</a>
         <a href="activity.html" class="nav-item">Activity</a>
-        <a href="indexLoggedOut.html" class="nav-item">Home</a>
-        <a href="login.html" class="nav-item">Profile</a>
+        <a href="indexLoggedIn.html" class="nav-item">Home</a>
+        <a href="profileLoggedIn.html" class="nav-item">Profile</a>
         <a href="search.html" class="nav-item">Search</a>
     </nav>
     <header class="header">
