--- a/indexLoggedOut.html
+++ b/indexLoggedOut.html
@@ -7,8 +7,8 @@
     <title>Common Ground</title>
     <link rel="stylesheet" href = "styles.css">
 
+    <!-- Temporary, to be replaced once DB implemented-->
     <style>
-     
      #family-tag {
         background-color: #ffe89d;
      }
@@ -34,7 +34,7 @@
 <body>
 
     <nav class="nav">
-        <a href="newpost.html" class="nav-item">New Post</a>
+        <a href="login.html" class="nav-item">New Post</a>
         <a href="activity.html" class="nav-item">Activity</a>
         <a href="indexLoggedOut.html" class="nav-item">Home</a>
         <a href="login.html" class="nav-item">Profile</a>
