--- a/login.html
+++ b/login.html
@@ -6,21 +6,21 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Navigation (if we want main nav on login page) -->
+    <nav class="nav">
+      <a href="login.html" class="nav-item">New Post</a>
+      <a href="activity.html" class="nav-item">Activity</a>
+      <a href="indexLoggedOut.html" class="nav-item">Home</a>
+      <a href="login.html" class="nav-item">Profile</a>
+      <a href="search.html" class="nav-item">Search</a>
+    </nav>
+    
   <!-- Header -->
   <header class="header">
     <h1 class="site-name">Common Ground</h1>
     <!-- Replace this link -->
     <a href="#" class="logout-btn">Need Help?</a>
   </header>
-
-  <!-- Navigation (if we want main nav on login page) -->
-  <nav class="nav">
-    <a href="home.html" class="nav-item">Home</a>
-    <a href="search.html" class="nav-item">Search</a>
-    <a href="profile.html" class="nav-item">Profile</a>
-    <a href="newpost.html" class="nav-item">New Post</a>
-    <a href="login.html" class="nav-item">Login</a>
-  </nav>
 
   <!-- Main Content -->
   <div class="main-content">
