Adjusted files, and their references to php files

--- a/newpost.html
+++ b/newpost.html
@@ -11,8 +11,8 @@
   <nav class="nav">
     <a href="newpost.html" class="nav-item">New Post</a>
     <a href="activity.html" class="nav-item">Activity</a>
-    <a href="indexLoggedIn.html" class="nav-item">Home</a>
-    <a href="progileLoggedIn.html" class="nav-item">Profile</a>
+    <a href="index.php" class="nav-item">Home</a>
+    <a href="profile.php" class="nav-item">Profile</a>
     <a href="search.html" class="nav-item">Search</a>
 </nav>
 
