--- a/activity.html
+++ b/activity.html
@@ -35,7 +35,7 @@
     <nav class="nav">
         <a href="newpost.html" class="nav-item">New Post</a>
         <a href="activity.html" class="nav-item">Activity</a>
-        <a href="indexLoggedIn.html" class="nav-item">Home</a>
+        <a href="index.php" class="nav-item">Home</a>
         <a href="profileLoggedIn.html" class="nav-item">Profile</a>
         <a href="search.html" class="nav-item">Search</a>
     </nav>
