--- a/admin_search.html
+++ b/admin_search.html
@@ -8,11 +8,10 @@
 <body>
   <!-- Navigation Bar -->
   <nav class="nav">
-    <a href="login.html" class="nav-item">New Post</a>
+    <a href="login.php" class="nav-item">New Post</a>
     <a href="activity.html" class="nav-item">Activity</a>
-    <a href="indexLoggedIn.html" class="nav-item">Home</a>
-    <a href="profileLoggedIn.html" class="nav-item">Profile</a>
-    <a href="search.html" class="nav-item">Search</a>
+    <a href="index.php" class="nav-item">Home</a>
+    <a href="search.html" class="nav-item">General Search</a>
   </nav>
 
   <!-- Header -->
