--- a/post.html
+++ b/post.html
@@ -31,8 +31,8 @@
     <nav class="nav">
         <a href="newpost.html" class="nav-item">New Post</a>
         <a href="activity.html" class="nav-item">Activity</a>
-        <a href="indexLoggedOut.html" class="nav-item">Home</a>
-        <a href="login.html" class="nav-item">Profile</a>
+        <a href="index.php" class="nav-item">Home</a>
+        <a href="login.php" class="nav-item">Profile</a>
         <a href="search.html" class="nav-item">Search</a>
     </nav>
 
