--- a/signup.html
+++ b/signup.html
@@ -8,10 +8,10 @@
 <body>
   <!-- Navigation Bar -->
   <nav class="nav">
-    <a href="login.html" class="nav-item">New Post</a>
+    <a href="login.php" class="nav-item">New Post</a>
       <a href="activity.html" class="nav-item">Activity</a>
-      <a href="indexLoggedOut.html" class="nav-item">Home</a>
-      <a href="login.html" class="nav-item">Profile</a>
+      <a href="index.php" class="nav-item">Home</a>
+      <a href="login.php" class="nav-item">Profile</a>
       <a href="search.html" class="nav-item">Search</a>
   </nav>
 
@@ -80,7 +80,7 @@
 
       <p>
         Already have an account?
-        <a href="login.html">Login</a>
+        <a href="login.php">Login</a>
       </p>
     </main>
   </div>
