--- a/admin_results.html
+++ b/admin_results.html
@@ -10,7 +10,7 @@
   <nav class="nav">
     <a href="login.php" class="nav-item">New Post</a>
     <a href="activity.html" class="nav-item">Activity</a>
-    <a href="index.php" class="nav-item">Home</a>
+    <a href="indexLoggedIn.html" class="nav-item">Home</a>
     <a href="profileLoggedIn.html" class="nav-item">Find Users</a>
     <a href="search.html" class="nav-item">General Search</a>
   </nav>
