--- a/newpost.html
+++ b/newpost.html
@@ -19,7 +19,7 @@
   <!-- Header --> 
   <header class="header">
     <h1 class="site-name">Common Ground</h1>
-    <a href="#" class="logout-btn">Logout</a>
+    <a href="logout.php" class="logout-btn">Logout</a>
   </header>
 
   <!-- Main Content -->
