Finalized refactoring process to php and header changes

--- a/signup.html
+++ b/signup.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <!-- Navigation Bar -->
+   <!-- Should be moved as well with the login page -->
   <nav class="nav">
     <a href="login.php" class="nav-item">New Post</a>
       <a href="activity.html" class="nav-item">Activity</a>
@@ -19,7 +20,7 @@
   <header class="header">
     <h1 class="site-name">Common Ground</h1>
     <!-- Example link to home change later -->
-    <a href="home.html" class="logout-btn">Back to Home</a>
+    <a href="index.php" class="logout-btn">Back to Home</a>
   </header>
 
   <div class="main-content">
