--- a/inprogress.html
+++ b/inprogress.html
@@ -250,7 +250,7 @@
 
         <!-- if user is logged in, change side bar on the right -->
         $.get("home.html", function (data) {
-            $("#main_\content").replaceWith(data);
+            $("#main_content").replaceWith(data);
         });
 
 
